--- a/public/026-terms-of-sale.html
+++ b/public/026-terms-of-sale.html
@@ -706,14 +706,84 @@
 				</div>
 			</div>
 			<!-- start sTermsOfSale-->
-			<section class="sTermsOfSale section" id="sTermsOfSale">
-				<div class="container">
-					<div class="section-title text-center">
-						<h2>sTermsOfSale</h2>
+			<div class="sTermsOfSale section" id="sTermsOfSale">
+				<div class="sTermsOfSale__definitions bg-wrap">
+					<!-- picture-->
+					<picture class="picture-bg"> 
+						<source type="image/avif" srcset="img/@2x/avif/dark-bg.avif"/>
+						<source type="image/webp" srcset="img/@2x/webp/dark-bg.webp"/><img class="object-fit-js" src="img/@2x/dark-bg.png" alt="" loading="lazy"/>
+					</picture>
+					<!-- /picture-->
+					<div class="container">
+						<div class="row">
+									<div class="col-md-6 col-lg-4">
+										<div class="sTermsOfSale__definition">
+											<h3>Продавец</h3>
+											<p>Общество с&nbsp;ограниченной ответственностью &laquo;ТД&nbsp;Археон&raquo;, зарегистрированное в&nbsp;качестве юридического лица по&nbsp;законодательству Российской Федерации, имеющее место нахождения 108850&nbsp;г. Москва, поселение Внуковское, ул. Авиаконструктора Петлякова, д.&nbsp;9, пом.3, офис 11, ИНН 7751175159, КПП 775101001, ОГРН 1207700005897.</p>
+										</div>
+									</div>
+									<div class="col-md-6 col-lg-4">
+										<div class="sTermsOfSale__definition">
+											<h3>Клиент</h3>
+											<p>Полностью дееспособное физическое лицо, размещающее Заказы на&nbsp;сайте <a href="#">kitchenmania.ru</a>, либо указанное в&nbsp;качестве получателя Товара, либо использующее Товары, приобретённые на&nbsp;сайте <a href="#">kitchenmania.ru</a>, исключительно для личных, семейных, домашних и&nbsp;иных нужд, не&nbsp;связанных с&nbsp;осуществлением предпринимательской деятельности</p>
+										</div>
+									</div>
+									<div class="col-md-6 col-lg-4">
+										<div class="sTermsOfSale__definition">
+											<h3>Интернет-магазин</h3>
+											<p>Интернет-сайт, принадлежащий Продавцу, расположенный на&nbsp;сервере в&nbsp;г. Москва и&nbsp;имеющий адрес в&nbsp;сети Интернет <a href="#">kitchenmania.ru</a>. <br> На&nbsp;нем представлены товары, предлагаемые Продавцом своим Клиентам для оформления Заказов, а&nbsp;также условия оплаты и&nbsp;доставки этих Заказов Клиентам</p>
+										</div>
+									</div>
+									<div class="col-md-6 col-lg-4">
+										<div class="sTermsOfSale__definition">
+											<h3>Сайт</h3>
+											<p><a href="#">kitchenmania.ru</a></p>
+										</div>
+									</div>
+									<div class="col-md-6 col-lg-4">
+										<div class="sTermsOfSale__definition">
+											<h3>Товар</h3>
+											<p>Объект материального мира, не&nbsp;изъятый из&nbsp;гражданского оборота и&nbsp;представленный к&nbsp;продаже на&nbsp;Сайте.</p>
+										</div>
+									</div>
+									<div class="col-md-6 col-lg-4">
+										<div class="sTermsOfSale__definition">
+											<h3>Заказ</h3>
+											<p>Должным образом оформленный запрос Клиента на&nbsp;доставку по&nbsp;указанному адресу перечня Товаров, выбранных на&nbsp;Сайте</p>
+										</div>
+									</div>
+									<div class="col-md-6 col-lg-4">
+										<div class="sTermsOfSale__definition">
+											<h3>Пользовательский счет клиента</h3>
+											<p>Персональный счет Клиента в&nbsp;Интернет-магазине, на&nbsp;который производится зачисление денежных средств в&nbsp;случае возврата или отказа Клиента от&nbsp;ранее оплаченного им&nbsp;Заказа. Эти денежные средства подлежат использованию в&nbsp;качестве предоплаты за&nbsp;последующие Заказы Клиента у&nbsp;Продавца, либо по&nbsp;письменному заявлению Клиента возврату Клиенту способом, которым была произведена оплата.</p>
+										</div>
+									</div>
+									<div class="col-md-6 col-lg-4">
+										<div class="sTermsOfSale__definition">
+											<h3>Служба доставки</h3>
+											<p>Третье лицо, оказывающее по&nbsp;договору с&nbsp;Продавцом услуги по&nbsp;доставке Заказов Клиентам.</p>
+										</div>
+									</div>
+									<div class="col-md-6 col-lg-4">
+										<div class="sTermsOfSale__definition">
+											<h3>Интернет-магазин</h3>
+											<p>Сайт в&nbsp;глобальной сети Интернет, ссылка на&nbsp;который размещена на&nbsp;сайте <a href="#">kitchenmania.ru</a>.</p>
+										</div>
+									</div>
+						</div>
 					</div>
-					<div class="row"></div>
 				</div>
-			</section>
+				<div class="sTermsOfSale__regulations">
+					<div class="container">
+						<div class="text-secondary">
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!</p>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!</p>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!</p>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!</p>
+						</div>
+					</div>
+				</div>
+			</div>
 			<!-- end sTermsOfSale-->
 			<footer class="footer footer-dd-items-js">
 				<div class="footer__bg"><img loading="lazy" src="img/@2x/sAbout-bg.png" alt=""/>
