--- a/public/026-terms-of-sale.html
+++ b/public/026-terms-of-sale.html
@@ -788,11 +788,38 @@
 				</div>
 				<div class="sTermsOfSale__regulations">
 					<div class="container">
-						<div class="text-secondary">
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!</p>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!</p>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!</p>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!</p>
+						<div class="dropdown"> 
+							<button class="sTermsOfSale__btn dropdown__btn">Все бренды
+								<svg class="icon icon-chevron-down ">
+									<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
+								</svg>
+							</button>
+							<div class="dropdown-menu dropdown__content">
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!</p>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!</p>
+							</div>
+						</div>
+						<div class="dropdown"> 
+							<button class="sTermsOfSale__btn dropdown__btn">Все бренды
+								<svg class="icon icon-chevron-down ">
+									<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
+								</svg>
+							</button>
+							<div class="dropdown-menu dropdown__content">
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!</p>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!</p>
+							</div>
+						</div>
+						<div class="dropdown"> 
+							<button class="sTermsOfSale__btn dropdown__btn">Все бренды
+								<svg class="icon icon-chevron-down ">
+									<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
+								</svg>
+							</button>
+							<div class="dropdown-menu dropdown__content">
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!</p>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!</p>
+							</div>
 						</div>
 					</div>
 				</div>
