sTermsOfSale section done

--- a/public/026-terms-of-sale.html
+++ b/public/026-terms-of-sale.html
@@ -786,39 +786,103 @@
 						</div>
 					</div>
 				</div>
-				<div class="sTermsOfSale__regulations">
-					<div class="container">
-						<div class="dropdown"> 
-							<button class="sTermsOfSale__btn dropdown__btn">Все бренды
-								<svg class="icon icon-chevron-down ">
-									<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
+				<div class="container">
+					<div class="sTermsOfSale__regulations">
+						<div class="dropdown">
+							<div class="dropdown__btn"> 
+								<h2>Общие положения<span>1.</span></h2>
+								<svg class="icon icon-drop-arrow ">
+									<use xlink:href="img/svg/sprite.svg#drop-arrow"></use>
 								</svg>
-							</button>
-							<div class="dropdown-menu dropdown__content">
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!</p>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!</p>
+							</div>
+							<div class="dropdown__content">
+								<ul>
+									<li><span>1.1.</span>
+										<p>Сайт принадлежит и&nbsp;администрируется Продавцом.</p>
+									</li>
+									<li><span>1.2.</span>
+										<p>Заказывая товары через Интернет-магазин, Клиент соглашается с&nbsp;Условиями продажи товаров (далее&nbsp;&mdash; Условия), изложенными ниже.</p>
+									</li>
+									<li><span>1.3.</span>
+										<p>Настоящие Условия являются публичной офертой в&nbsp;соответствии со&nbsp;ст.435 и&nbsp;ч.2 ст.437&nbsp;ГК РФ.</p>
+									</li>
+									<li><span>1.4.</span>
+										<p>К&nbsp;отношениям между Клиентом и&nbsp;Продавцом применяются положения ГК&nbsp;РФ&nbsp;о&nbsp;розничной купле-продаже (&sect;&nbsp;2&nbsp;глава&nbsp;30), а&nbsp;также Закон РФ&nbsp;&laquo;О&nbsp;защите прав потребителей&raquo; от&nbsp;07.02.1992 &#8470;&nbsp;2300-1 и&nbsp;иные правовые акты, принятые в&nbsp;соответствии с&nbsp;ними.</p>
+									</li>
+									<li><span>1.5.</span>
+										<p>Продавец оставляет за&nbsp;собой право вносить изменения в&nbsp;настоящие Условия, в&nbsp;связи с&nbsp;чем, Клиент обязуется отслеживать изменения в&nbsp;Условиях.</p>
+									</li>
+									<li><span>1.6.</span>
+										<p>Клиент соглашается с&nbsp;Условиями нажатием кнопки &laquo;Оформить заказ&raquo; на&nbsp;этапе оформления Заказа на&nbsp;Сайте.</p>
+									</li>
+								</ul>
 							</div>
 						</div>
-						<div class="dropdown"> 
-							<button class="sTermsOfSale__btn dropdown__btn">Все бренды
-								<svg class="icon icon-chevron-down ">
-									<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
+						<div class="dropdown">
+							<div class="dropdown__btn"> 
+								<h2>Регистрация на&nbsp;Сайте<span>2.</span></h2>
+								<svg class="icon icon-drop-arrow ">
+									<use xlink:href="img/svg/sprite.svg#drop-arrow"></use>
 								</svg>
-							</button>
-							<div class="dropdown-menu dropdown__content">
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!</p>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!</p>
+							</div>
+							<div class="dropdown__content">
+								<ul>
+									<li><span>2.1.</span>
+										<p>Сайт принадлежит и&nbsp;администрируется Продавцом.</p>
+									</li>
+									<li><span>2.2.</span>
+										<p>Заказывая товары через Интернет-магазин, Клиент соглашается с&nbsp;Условиями продажи товаров (далее&nbsp;&mdash; Условия), изложенными ниже.</p>
+									</li>
+									<li><span>2.3.</span>
+										<p>Настоящие Условия являются публичной офертой в&nbsp;соответствии со&nbsp;ст.435 и&nbsp;ч.2 ст.437&nbsp;ГК РФ.</p>
+									</li>
+									<li><span>2.4.</span>
+										<p>К&nbsp;отношениям между Клиентом и&nbsp;Продавцом применяются положения ГК&nbsp;РФ&nbsp;о&nbsp;розничной купле-продаже (&sect;&nbsp;2&nbsp;глава&nbsp;30), а&nbsp;также Закон РФ&nbsp;&laquo;О&nbsp;защите прав потребителей&raquo; от&nbsp;07.02.1992 &#8470;&nbsp;2300-1 и&nbsp;иные правовые акты, принятые в&nbsp;соответствии с&nbsp;ними.</p>
+									</li>
+									<li><span>2.5.</span>
+										<p>Продавец оставляет за&nbsp;собой право вносить изменения в&nbsp;настоящие Условия, в&nbsp;связи с&nbsp;чем, Клиент обязуется отслеживать изменения в&nbsp;Условиях.</p>
+									</li>
+									<li><span>2.6.</span>
+										<p>Клиент соглашается с&nbsp;Условиями нажатием кнопки &laquo;Оформить заказ&raquo; на&nbsp;этапе оформления Заказа на&nbsp;Сайте.</p>
+									</li>
+								</ul>
 							</div>
 						</div>
-						<div class="dropdown"> 
-							<button class="sTermsOfSale__btn dropdown__btn">Все бренды
-								<svg class="icon icon-chevron-down ">
-									<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
+						<div class="dropdown">
+							<div class="dropdown__btn"> 
+								<h2>Оформление и&nbsp;сроки выполнения Заказа<span>3.</span></h2>
+								<svg class="icon icon-drop-arrow ">
+									<use xlink:href="img/svg/sprite.svg#drop-arrow"></use>
 								</svg>
-							</button>
-							<div class="dropdown-menu dropdown__content">
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!</p>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta harum nam ex, enim inventore eius dolorem maiores ipsam. Et nam omnis quis rerum earum alias hic. Suscipit numquam possimus repudiandae!</p>
+							</div>
+							<div class="dropdown__content">
+								<ul>
+									<li><span>3.1.</span>
+										<p>Заказ Клиента может быть оформлен следующими способами: принят по&nbsp;телефону или оформлен Клиентом самостоятельно на&nbsp;Сайте. Подробности оформления Заказа описаны в&nbsp;разделе Доставка и&nbsp;оплата</p>
+									</li>
+									<li><span>3.2.</span>
+										<ul>
+											<li>
+												<p>При оформлении Заказа Клиент должен указать следующую информацию:</p>
+											</li>
+											<li>полностью Ф.И.О. Клиента либо Получателя Заказа;</li>
+											<li>адрес доставки Заказа;</li>
+											<li>контактный телефон.</li>
+										</ul>
+									</li>
+									<li><span>3.3.</span>
+										<p>После оформления заказа Клиенту предоставляется информация об&nbsp;ожидаемой дате передачи Заказа в&nbsp;Службу доставки. Эта дата означает срок, в&nbsp;который Продавец обязуется передать Заказ Клиента в&nbsp;выбранную им&nbsp;при оформлении Заказа Службу доставки. Указанная дата зависит от&nbsp;наличия заказанных Товаров на&nbsp;складе Продавца и&nbsp;времени, необходимого на&nbsp;обработку Заказа.</p>
+									</li>
+									<li><span>3.10.</span>
+										<p class="strong">Оформление Предзаказа</p>
+									</li>
+									<li><span>3.10.1.</span>
+										<p>Продавцом на&nbsp;Сайте могут быть предложены к&nbsp;оформлению предварительных заказов товары, еще не&nbsp;поступившие в&nbsp;продажу и&nbsp;не&nbsp;находящиеся на&nbsp;складе Продавца. Указанный товар оформляется в&nbsp;отдельный заказ (далее&nbsp;&mdash; Предзаказ).</p>
+									</li>
+									<li><span>3.10.2.1.</span>
+										<p>Продавцом на&nbsp;Сайте могут быть предложены к&nbsp;оформлению предварительных заказов товары, еще не&nbsp;поступившие в&nbsp;продажу и&nbsp;не&nbsp;находящиеся на&nbsp;складе Продавца. Указанный товар оформляется в&nbsp;отдельный заказ (далее&nbsp;&mdash; Предзаказ).</p>
+									</li>
+								</ul>
 							</div>
 						</div>
 					</div>
