--- a/public/028-guarantee.html
+++ b/public/028-guarantee.html
@@ -742,19 +742,19 @@
 								<li>Срок обмена товара на&nbsp;другой аналогичный&nbsp;&mdash; 7&nbsp;дней, при необходимости дополнительной проверки качества&nbsp;&mdash; 20&nbsp;дней (срок продлевается до&nbsp;30&nbsp;дней в&nbsp;случае отсутствия товара на&nbsp;складе).</li>
 							</ul>
 						</div>
-						<div class="warning-message">
-							<div class="warning-message__img-wrap"><img src="img/svg/icon-question.svg" alt=""/>
+						<div class="info-message">
+							<div class="info-message__img-wrap"><img src="img/svg/icon-question.svg" alt=""/>
 							</div>
-							<div class="warning-message__content">
+							<div class="info-message__content">
 								<h3>Если у&nbsp;вас остались вопросы:</h3>
 								<div class="row">
 									<div class="col col-sm-auto">
-										<div class="warning-message__title">Звоните
-										</div><a class="warning-message__tel" href="tel:+78005058293">Россия +7 (800) 505-82-93</a><a class="warning-message__tel" href="tel:+74951548137">Москва +7 (495) 154-81-37</a>
+										<div class="info-message__title">Звоните
+										</div><a class="info-message__tel" href="tel:+78005058293">Россия +7 (800) 505-82-93</a><a class="info-message__tel" href="tel:+74951548137">Москва +7 (495) 154-81-37</a>
 									</div>
 									<div class="col col-sm-auto">
-										<div class="warning-message__title">Пишите
-										</div><a class="warning-message__mail" href="mailto:shop@kitchenmania.ru">shop@kitchenmania.ru</a>
+										<div class="info-message__title">Пишите
+										</div><a class="info-message__mail" href="mailto:shop@kitchenmania.ru">shop@kitchenmania.ru</a>
 									</div>
 								</div>
 							</div>
