--- a/public/027-vacancy-page-2.html
+++ b/public/027-vacancy-page-2.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>title</title>
+		<title>Вакансии</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -712,143 +712,101 @@
 					<nav>
 						<ol class="breadcrumb">
 							<li class="breadcrumb-item"><a href="/"><span>Главная</span></a></li>
-							<li class="breadcrumb-item active"><a href="#"><span>Подключение техники</span></a></li>
+							<li class="breadcrumb-item active"><a href="#"><span>Вакансии</span></a></li>
 						</ol>
 					</nav>
-					<h2>Подключение техники</h2>
+					<h2>Вакансии</h2>
 				</div>
 			</div>
-			<!-- start sConnectionHead-->
-			<section class="sConnectionHead bg-wrap" id="sConnectionHead">
-				<!-- picture-->
-				<picture class="picture-bg"> 
-					<source type="image/avif" srcset="img/@2x/avif/сonnectionHead-bg.avif" media="(min-width:576px)"/>
-					<source type="image/avif" srcset="img/@1x/avif/сonnectionHead-bg.avif"/>
-					<source type="image/webp" srcset="img/@2x/webp/сonnectionHead-bg.webp" media="(min-width:576px)"/>
-					<source type="image/webp" srcset="img/@1x/webp/сonnectionHead-bg.webp"/>
-					<source type="image/jpg" srcset="img/@2x/avif/сonnectionHead-bg.jpg" media="(min-width:576px)"/>
-					<source type="image/jpg" srcset="img/@1x/avif/сonnectionHead-bg.jpg"/><img class="object-fit-js" src="img/@2x/сonnectionHead-bg.jpg" alt="" loading="lazy"/>
-				</picture>
-				<!-- /picture-->
-				<div class="container">
-					<div class="sConnectionHead__inner section">
-						<h1>Вся техника, представленная в&nbsp;нашем магазине, подключается на&nbsp;готовые коммуникации бесплатно*!</h1>
+			<!-- start sWorkTogether-->
+			<section class="sWorkTogether section" id="sWorkTogether">
+				<div class="container"> 
+					<div class="row">
+						<div class="col-lg">
+							<div class="sWorkTogether__bg bg-wrap"><picture class="picture-bg"> 
+<source type="image/avif" srcset="img/@2x/avif/workTogether-bg.avif" media="(min-width:576px)">
+<source type="image/avif" srcset="img/@1x/avif/workTogether-bg.avif">
+<source type="image/webp" srcset="img/@2x/webp/workTogether-bg.webp" media="(min-width:576px)">
+<source type="image/webp" srcset="img/@1x/webp/workTogether-bg.webp">
+<source type="image/jpg" srcset="img/@2x/avif/workTogether-bg.jpg" media="(min-width:576px)">
+<source type="image/jpg" srcset="img/@1x/avif/workTogether-bg.jpg"><img src="img/@2x/workTogether-bg.jpg" alt="">
+</picture>
+								<div class="sWorkTogether__wrap">
+									<h2>Работаем вместе</h2>
+									<p>Салон <span>Kitchen Mania</span> приглашает на&nbsp;работу сотрудников, стремящихся к&nbsp;успеху и&nbsp;развитию своего творческого потенциала, готовых реализовывать инновационные решения в&nbsp;соответствии с&nbsp;высокими требованиями качества</p>
+									<ul>
+										<li>
+											<svg class="icon icon-privilege ">
+												<use xlink:href="img/svg/sprite.svg#privilege"></use>
+											</svg>
+											<p>Программа привилегий для сотрудников</p>
+										</li>
+										<li>
+											<svg class="icon icon-growth ">
+												<use xlink:href="img/svg/sprite.svg#growth"></use>
+											</svg>
+											<p>Возможности карьерного роста</p>
+										</li>
+										<li>
+											<svg class="icon icon-community ">
+												<use xlink:href="img/svg/sprite.svg#community"></use>
+											</svg>
+											<p>Дружелюбный коллектив профессионалов своего дела</p>
+										</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+						<div class="sWorkTogether__col col-lg-auto">
+							<div class="sWorkTogether__content">
+								<div class="sWorkTogether__item">
+									<p>Салон <span>Kitchen Mania </span>стремится удовлетворить потребности покупателей и&nbsp;заказчиков, подбирая самые современные и&nbsp;продуманные технические решения для интерьеров кухни и&nbsp;дома</p>
+								</div>
+								<svg class="icon icon-arrow-down ">
+									<use xlink:href="img/svg/sprite.svg#arrow-down"></use>
+								</svg>
+								<div class="sWorkTogether__item sWorkTogether__item--indent">
+									<p><span>Kitchen Mania&nbsp;&mdash; </span>это компания, в&nbsp;которой каждый стремится добиться выдающегося результата и&nbsp;ценит особые условия, предлагаемые компанией для его развития и&nbsp;комфортной работы</p>
+								</div>
+								<div class="sWorkTogether__item">
+									<p>Мы&nbsp;добивается совершенства в&nbsp;каждой детали: от&nbsp;карьерных перспектив до&nbsp;комфортной атмосферы для каждого сотрудника компании</p>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
-			<!-- end sConnectionHead-->
-			<!-- start sWhatWeDo-->
-			<div class="sWhatWeDo section bg-wrap" id="sWhatWeDo">
-				<!-- picture-->
-				<picture class="picture-bg"> 
-					<source type="image/avif" srcset="img/@2x/avif/dark-bg.avif" media="(min-width:576px)"/>
-					<source type="image/avif" srcset="img/@1x/avif/dark-bg.avif"/>
-					<source type="image/webp" srcset="img/@2x/webp/dark-bg.webp" media="(min-width:576px)"/>
-					<source type="image/webp" srcset="img/@1x/webp/dark-bg.webp"/>
-					<source type="image/jpg" srcset="img/@2x/avif/dark-bg.jpg" media="(min-width:576px)"/>
-					<source type="image/jpg" srcset="img/@1x/avif/dark-bg.jpg"/><img class="object-fit-js" src="img/@2x/dark-bg.jpg" alt="" loading="lazy"/>
-				</picture>
-				<!-- /picture-->
+			<!-- end sWorkTogether-->
+			<!-- start sVacancyResult-->
+			<div class="sVacancyResult section" id="sVacancyResult">
 				<div class="container">
 					<div class="row">
-						<div class="col-12 col-md-6 col-xl-4">
-							<div class="whatWeDoCard">
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/whatWeDoCard-1.avif" media="(min-width:576px)"/>
-									<source type="image/avif" srcset="img/@1x/avif/whatWeDoCard-1.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/whatWeDoCard-1.webp" media="(min-width:576px)"/>
-									<source type="image/webp" srcset="img/@1x/webp/whatWeDoCard-1.webp"/>
-									<source type="image/jpg" srcset="img/@2x/avif/whatWeDoCard-1.jpg" media="(min-width:576px)"/>
-									<source type="image/jpg" srcset="img/@1x/avif/whatWeDoCard-1.jpg"/><img src="img/@2x/whatWeDoCard-1.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-								<div class="whatWeDoCard__text-wrap">
-									<p>Работы по&nbsp;подключению выполняют наши мастера или партнёрский сервис</p>
-								</div>
-								<div class="whatWeDoCard__icon">
-									<svg class="icon icon-tool ">
-										<use xlink:href="img/svg/sprite.svg#tool"></use>
+						<div class="col-12">
+							<div class="dropdown"> 
+								<button class="sVacancyResult__btn dropdown__btn">Все вакансии
+									<svg class="icon icon-chevron-down ">
+										<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
 									</svg>
-								</div>
+								</button>
+								<div class="dropdown-menu dropdown__content"><a class="dropdown-item" href="#">Административный персонал</a><a class="dropdown-item" href="#">Бухгалтерия, управленческий учёт и пр</a><a class="dropdown-item" href="#">Высший менеджмент</a><a class="dropdown-item" href="#">Закупки</a></div>
 							</div>
-						</div>
-						<div class="col-12 col-md-6 col-xl-4">
-							<div class="whatWeDoCard">
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/whatWeDoCard-2.avif" media="(min-width:576px)"/>
-									<source type="image/avif" srcset="img/@1x/avif/whatWeDoCard-2.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/whatWeDoCard-2.webp" media="(min-width:576px)"/>
-									<source type="image/webp" srcset="img/@1x/webp/whatWeDoCard-2.webp"/>
-									<source type="image/jpg" srcset="img/@2x/avif/whatWeDoCard-2.jpg" media="(min-width:576px)"/>
-									<source type="image/jpg" srcset="img/@1x/avif/whatWeDoCard-2.jpg"/><img src="img/@2x/whatWeDoCard-2.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-								<div class="whatWeDoCard__text-wrap">
-									<p>Демонтаж старой техники в&nbsp;стоимость услуг не&nbsp;входит и&nbsp;оплачивается отдельно</p>
-								</div>
-								<div class="whatWeDoCard__icon">
-									<svg class="icon icon-tool-2 ">
-										<use xlink:href="img/svg/sprite.svg#tool-2"></use>
-									</svg>
-								</div>
-							</div>
-						</div>
-						<div class="sWhatWeDo__col col-12 col-xl-4">
-							<p class="sWhatWeDo__text">Для того, чтобы избавить вас, наших клиентов, от&nbsp;излишних затрат времени и&nbsp;денег, мы&nbsp;предоставляем услуги подключения техники, приобретённой<br>у&nbsp;нас в&nbsp;интернет-магазине или шоу-руме, на&nbsp;готовые коммуникации абсолютно <span>бесплатно!</span>
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- end sWhatWeDo-->
-			<!-- start sDisposal-->
-			<div class="sDisposal section" id="sDisposal">
-				<div class="container">
-					<div class="row">
-						<div class="col-12 col-lg-7">
-							<div class="sDisposal__card">
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/disposal-bg.avif" media="(min-width:576px)"/>
-									<source type="image/avif" srcset="img/@1x/avif/disposal-bg.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/disposal-bg.webp" media="(min-width:576px)"/>
-									<source type="image/webp" srcset="img/@1x/webp/disposal-bg.webp"/>
-									<source type="image/jpg" srcset="img/@2x/avif/disposal-bg.jpg" media="(min-width:576px)"/>
-									<source type="image/jpg" srcset="img/@1x/avif/disposal-bg.jpg"/><img class="object-fit-js" src="img/@2x/disposal-bg.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-								<div class="sDisposal__wrap">
-									<div class="sDisposal__text">
-										<h4>Утилизация старой техники может быть произведена бесплатно.</h4>
-										<p>Подробности на&nbsp;странице акции &laquo;Утилизация техники&raquo;.</p>
+							<div class="form-wrap">
+								<form>
+									<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Поиск"/>
 									</div>
-									<svg class="icon icon-recycle ">
-										<use xlink:href="img/svg/sprite.svg#recycle"></use>
-									</svg>
-								</div>
-							</div>
-							<p>* Подробности узнавайте у&nbsp;консультантов. Акция распространяется на&nbsp;выделенные бренды.</p>
-						</div>
-						<div class="col">
-							<div class="sDisposal__condition">
-								<p>Вызов специалистов можно заказать у наших менеджеров по телефону</p><a href="tel:+74957758272">+7 495 775-82-72</a>
-								<svg class="icon icon-call ">
-									<use xlink:href="img/svg/sprite.svg#call"></use>
-								</svg>
-							</div>
-							<div class="sDisposal__condition">
-								<p>Дата и&nbsp;время установки можно согласовать при оформлении заказа.</p>
-								<svg class="icon icon-clock ">
-									<use xlink:href="img/svg/sprite.svg#clock"></use>
-								</svg>
+									<!-- +e.input-wrap-->
+									<button>
+										<svg class="icon icon-zoom ">
+											<use xlink:href="img/svg/sprite.svg#zoom"></use>
+										</svg>
+									</button>
+								</form>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-			<!-- end sDisposal-->
+			<!-- end sVacancyResult-->
 			<!-- start sForm-->
 			<section class="sForm section">
 				<div class="container">
