--- a/public/026-terms-of-sale.html
+++ b/public/026-terms-of-sale.html
@@ -788,7 +788,7 @@
 				</div>
 				<div class="container">
 					<div class="sTermsOfSale__regulations">
-						<div class="dropdown">
+						<div class="dropdown active">
 							<div class="dropdown__btn"> 
 								<h2>Общие положения<span>1.</span></h2>
 								<svg class="icon icon-drop-arrow ">
