--- a/public/027-vacancy-page.html
+++ b/public/027-vacancy-page.html
@@ -729,7 +729,8 @@
 <source type="image/webp" srcset="img/@2x/webp/workTogether-bg.webp" media="(min-width:576px)">
 <source type="image/webp" srcset="img/@1x/webp/workTogether-bg.webp">
 <source type="image/jpg" srcset="img/@2x/avif/workTogether-bg.jpg" media="(min-width:576px)">
-<source type="image/jpg" srcset="img/@1x/avif/workTogether-bg.jpg"><img src="img/@2x/workTogether-bg.jpg" alt="">
+<source type="image/jpg" srcset="img/@1x/avif/workTogether-bg.jpg">
+<img src="img/@2x/workTogether-bg.jpg" alt="">
 </picture>
 								<div class="sWorkTogether__wrap">
 									<h2>Работаем вместе</h2>
