--- a/public/029-how-to-order.html
+++ b/public/029-how-to-order.html
@@ -744,15 +744,56 @@
 			</section>
 			<!-- end sHowToOrderHead-->
 			<!-- start sStepsToOrder-->
-			<div class="sStepsToOrder section bg-wrap" id="sStepsToOrder">
+			<section class="sStepsToOrder section bg-wrap" id="sStepsToOrder">
 				<!-- picture-->
 				<picture class="picture-bg"> 
 					<source type="image/avif" srcset="img/@2x/avif/dark-bg.avif"/>
 					<source type="image/webp" srcset="img/@2x/webp/dark-bg.webp"/><img class="object-fit-js" src="img/@2x/dark-bg.jpg" alt="" loading="lazy"/>
 				</picture>
 				<!-- /picture-->
-				<div class="container"></div>
-			</div>
+				<div class="container">
+					<div class="sStepsToOrder__wrap">
+						<div class="sStepsToOrder__img-wrap"><img src="img/@2x/web.png" alt="" loading="lazy"/>
+						</div>
+						<div class="sStepsToOrder__content">
+							<h2>На сайте</h2>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-lg-6 col-xl-8">
+							<div class="sStepsToOrder__list">
+								<svg class="icon icon-arrow-clockwise ">
+									<use xlink:href="img/svg/sprite.svg#arrow-clockwise"></use>
+								</svg>
+								<div class="sStepsToOrder__item">
+									<h3>Добавить товар в&nbsp;корзину</h3>
+									<p>Нажмите в&nbsp;карточке товара кнопку <span>&laquo;Купить&raquo;</span><br>или на&nbsp;пиктограмму &laquo;Корзины&raquo;. Понравившейся товар немедленно добавится в&nbsp;ваш&nbsp;заказ.</p><span>1</span>
+								</div>
+								<div class="sStepsToOrder__item">
+									<h3>Проверка состава заказа</h3>
+									<p>Перейдите в&nbsp;вашу личную корзину нажатием пиктограммы <span>&laquo;Корзина&raquo;</span> в&nbsp;правом верхнем углу окна сайта. Проверьте состав заказа. Если необходимо&nbsp;&mdash; отредактируйте список товаров и&nbsp;количество заказываемых позиций.</p><span>2</span>
+								</div>
+								<div class="sStepsToOrder__item">
+									<h3>Подтверждение заказа</h3>
+									<p>Через несколько минут с&nbsp;вами свяжется менеджер магазина для уточнения деталей и&nbsp;подтверждения заказа.</p><span>4</span>
+								</div>
+								<div class="sStepsToOrder__item">
+									<h3>Оформление заказа</h3>
+									<p>Нажмите &laquo;Оформить заказ&raquo;. Проверьте Личные данные (если вы&nbsp;зарегистрированы и&nbsp;авторизованы на&nbsp;сайте, то&nbsp;данные заполнятся автоматически), корректность номера телефона и&nbsp;e-mail. Выберите способ доставки и&nbsp;форму оплаты.</p><span>3</span>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-6 col-xl-4 bg-wrap">
+							<!-- picture-->
+							<picture class="picture-bg"> 
+								<source type="image/avif" srcset="img/@2x/avif/sStepsToOrder-bg.avif"/>
+								<source type="image/webp" srcset="img/@2x/webp/sStepsToOrder-bg.webp"/><img class="object-fit-js" src="img/@2x/sStepsToOrder-bg.jpg" alt="" loading="lazy"/>
+							</picture>
+							<!-- /picture-->
+						</div>
+					</div>
+				</div>
+			</section>
 			<!-- end sStepsToOrder-->
 			<footer class="footer footer-dd-items-js">
 				<div class="footer__bg"><img loading="lazy" src="img/@2x/sAbout-bg.png" alt=""/>
