--- a/public/022-connection-of-equipment.html
+++ b/public/022-connection-of-equipment.html
@@ -852,9 +852,13 @@
 			<!-- start sForm-->
 			<section class="sForm section">
 				<div class="container">
-					<div class="sForm__box">
-						<div class="sForm__bg"><img loading="lazy" src="img/@2x/sAbout-bg.png" alt=""/>
-						</div>
+					<div class="sForm__box bg-wrap">
+						<!-- picture-->
+						<picture class="picture-bg"> 
+							<source type="image/avif" srcset="img/@2x/avif/dark-bg.avif"/>
+							<source type="image/webp" srcset="img/@2x/webp/dark-bg.webp"/><img class="object-fit-js" src="img/@2x/dark-bg.png" alt="" loading="lazy"/>
+						</picture>
+						<!-- /picture-->
 						<div class="section-title">
 							<h2>Хотите связаться с нами и что-то предложить?</h2>
 							<p>Заполните форму обратной связи, напишите ваше мнение. Мы ответим вам на указанную почту</p>
