--- a/public/028-guarantee.html
+++ b/public/028-guarantee.html
@@ -743,7 +743,10 @@
 							</ul>
 						</div>
 						<div class="info-message">
-							<div class="info-message__img-wrap"><img src="img/svg/icon-question.svg" alt=""/>
+							<div class="info-message__img-wrap">
+								<svg class="icon icon-icon-question ">
+									<use xlink:href="img/svg/sprite.svg#icon-question"></use>
+								</svg>
 							</div>
 							<div class="info-message__content">
 								<h3>Если у&nbsp;вас остались вопросы:</h3>
