--- a/public/030-news.html
+++ b/public/030-news.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Вакансии</title>
+		<title>Новости</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="libs/ion-rangeslider/css/ion.rangeSlider.min.css"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
 	</head>
-	<body data-bg="index.png">
+	<body>
 		<div class="main-wrapper">
 			<div class="menu-mobile menu-mobile--js d-xl-none">
 				<div class="toggle-menu-mobile toggle-menu-mobile--js"><span></span>
@@ -712,134 +712,213 @@
 					<nav>
 						<ol class="breadcrumb">
 							<li class="breadcrumb-item"><a href="/"><span>Главная</span></a></li>
-							<li class="breadcrumb-item active"><a href="#"><span>Вакансии</span></a></li>
+							<li class="breadcrumb-item active"><a href="#"><span>Новости</span></a></li>
 						</ol>
 					</nav>
-					<h2>Вакансии</h2>
+					<h2>Новости</h2>
 				</div>
 			</div>
-			<!-- start sWorkTogether-->
-			<section class="sWorkTogether section" id="sWorkTogether">
-				<div class="container"> 
-					<div class="row">
-						<div class="col-lg">
-							<div class="sWorkTogether__bg bg-wrap"><picture class="picture-bg"> 
-<source type="image/avif" srcset="img/@2x/avif/workTogether-bg.avif" media="(min-width:576px)">
-<source type="image/avif" srcset="img/@1x/avif/workTogether-bg.avif">
-<source type="image/webp" srcset="img/@2x/webp/workTogether-bg.webp" media="(min-width:576px)">
-<source type="image/webp" srcset="img/@1x/webp/workTogether-bg.webp">
-<source type="image/jpg" srcset="img/@2x/avif/workTogether-bg.jpg" media="(min-width:576px)">
-<source type="image/jpg" srcset="img/@1x/avif/workTogether-bg.jpg">
-<img src="img/@2x/workTogether-bg.jpg" alt="">
-</picture>
-								<div class="sWorkTogether__wrap">
-									<h2>Работаем вместе</h2>
-									<p>Салон <span>Kitchen Mania</span> приглашает на&nbsp;работу сотрудников, стремящихся к&nbsp;успеху и&nbsp;развитию своего творческого потенциала, готовых реализовывать инновационные решения в&nbsp;соответствии с&nbsp;высокими требованиями качества</p>
-									<ul>
-										<li>
-											<svg class="icon icon-privilege ">
-												<use xlink:href="img/svg/sprite.svg#privilege"></use>
-											</svg>
-											<p>Программа привилегий для сотрудников</p>
-										</li>
-										<li>
-											<svg class="icon icon-growth ">
-												<use xlink:href="img/svg/sprite.svg#growth"></use>
-											</svg>
-											<p>Возможности карьерного роста</p>
-										</li>
-										<li>
-											<svg class="icon icon-community ">
-												<use xlink:href="img/svg/sprite.svg#community"></use>
-											</svg>
-											<p>Дружелюбный коллектив профессионалов своего дела</p>
-										</li>
-									</ul>
-								</div>
-							</div>
+			<!-- start sNewsHeader-->
+			<div class="sNewsHeader section bg-wrap" id="sNewsHeader">
+				<!-- picture-->
+				<picture class="picture-bg"> 
+					<source type="image/avif" srcset="img/@2x/avif/dark-bg.avif"/>
+					<source type="image/webp" srcset="img/@2x/webp/dark-bg.webp"/><img class="object-fit-js" src="img/@2x/dark-bg.png" alt="" loading="lazy"/>
+				</picture>
+				<!-- /picture-->
+				<div class="container">
+					<div class="sNewsHeader__cards"><a class="sNewsHeader__item bg-wrap" href="#">
+						<!-- picture-->
+						<picture> 
+							<source type="image/avif" srcset="img/@2x/avif/sNewsHeader-1.avif"/>
+							<source type="image/webp" srcset="img/@2x/webp/sNewsHeader-1.webp"/><img class="object-fit-js" src="img/@2x/sNewsHeader-1.png" alt="" loading="lazy"/>
+						</picture>
+						<!-- /picture--><span class="sNewsHeader__caption">
+						<h3>Новинки от&nbsp;Miele
+							<svg class="icon icon-chevron-right-lg ">
+								<use xlink:href="img/svg/sprite.svg#chevron-right-lg"></use>
+							</svg>
+						</h3><span class="sNewsHeader__date">21.12.2021</span>
+						<p>В&nbsp;мае 2018 года компания Miele обновила ассортимент вытяжек. Встраиваемые, подвесные, настенные и&nbsp;островные модели из&nbsp;предыдущего каталога ...</p></span></a><a class="sNewsHeader__item bg-wrap" href="#">
+						<!-- picture-->
+						<picture> 
+							<source type="image/avif" srcset="img/@2x/avif/sNewsHeader-2.avif"/>
+							<source type="image/webp" srcset="img/@2x/webp/sNewsHeader-2.webp"/><img class="object-fit-js" src="img/@2x/sNewsHeader-2.png" alt="" loading="lazy"/>
+						</picture>
+						<!-- /picture--><span class="sNewsHeader__caption">
+						<h3>Снижены цены на&nbsp;мойки Blanco
+							<svg class="icon icon-chevron-right-lg ">
+								<use xlink:href="img/svg/sprite.svg#chevron-right-lg"></use>
+							</svg>
+						</h3><span class="sNewsHeader__date">21.12.2021</span>
+						<p>В&nbsp;мае 2018 года компания Miele обновила ассортимент вытяжек. Встраиваемые, подвесные, настенные и&nbsp;островные модели из&nbsp;предыдущего каталога ...</p></span></a><a class="sNewsHeader__item bg-wrap" href="#">
+						<!-- picture-->
+						<picture> 
+							<source type="image/avif" srcset="img/@2x/avif/sNewsHeader-3.avif"/>
+							<source type="image/webp" srcset="img/@2x/webp/sNewsHeader-3.webp"/><img class="object-fit-js" src="img/@2x/sNewsHeader-3.png" alt="" loading="lazy"/>
+						</picture>
+						<!-- /picture--><span class="sNewsHeader__caption">
+						<h3>Новинки кухонной бытовой <br> техники от&nbsp;Asko
+							<svg class="icon icon-chevron-right-lg ">
+								<use xlink:href="img/svg/sprite.svg#chevron-right-lg"></use>
+							</svg>
+						</h3><span class="sNewsHeader__date">21.12.2021</span>
+						<p>В&nbsp;мае 2018 года компания Miele обновила ассортимент вытяжек. Встраиваемые, подвесные, настенные и&nbsp;островные модели из&nbsp;предыдущего каталога ...</p></span></a>
+					</div>
+				</div>
+			</div>
+			<!-- end sNewsHeader-->
+			<!-- start sNewsCards-->
+			<div class="sNewsCards section" id="sNewsCards">
+				<div class="container">
+					<div class="sNewsCards__filter">
+						<div class="sNewsCards__icon-wrap">
+							<svg class="icon icon-icon-news ">
+								<use xlink:href="img/svg/sprite.svg#icon-news"></use>
+							</svg>
 						</div>
-						<div class="sWorkTogether__col col-lg-auto">
-							<div class="sWorkTogether__content">
-								<div class="sWorkTogether__item">
-									<p>Салон <span>Kitchen Mania </span>стремится удовлетворить потребности покупателей и&nbsp;заказчиков, подбирая самые современные и&nbsp;продуманные технические решения для интерьеров кухни и&nbsp;дома</p>
-								</div>
-								<svg class="icon icon-arrow-down ">
-									<use xlink:href="img/svg/sprite.svg#arrow-down"></use>
+						<div class="dropdown"> 
+							<button class="dropdown__btn">Месяц
+								<svg class="icon icon-chevron-down ">
+									<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
 								</svg>
-								<div class="sWorkTogether__item sWorkTogether__item--indent">
-									<p><span>Kitchen Mania&nbsp;&mdash; </span>это компания, в&nbsp;которой каждый стремится добиться выдающегося результата и&nbsp;ценит особые условия, предлагаемые компанией для его развития и&nbsp;комфортной работы</p>
-								</div>
-								<div class="sWorkTogether__item">
-									<p>Мы&nbsp;добивается совершенства в&nbsp;каждой детали: от&nbsp;карьерных перспектив до&nbsp;комфортной атмосферы для каждого сотрудника компании</p>
-								</div>
+							</button>
+							<div class="dropdown__content"><a class="dropdown__item" href="#">Январь</a><a class="dropdown__item" href="#">Февраль</a><a class="dropdown__item" href="#">Март</a><a class="dropdown__item" href="#">Апрель</a><a class="dropdown__item" href="#">Май</a><a class="dropdown__item" href="#">Июнь</a><a class="dropdown__item" href="#">Июль</a><a class="dropdown__item" href="#">Август</a><a class="dropdown__item" href="#">Сентябрь</a><a class="dropdown__item" href="#">Октябрь</a><a class="dropdown__item" href="#">Ноябрь</a><a class="dropdown__item" href="#">Декабрь</a>
 							</div>
 						</div>
 					</div>
-				</div>
-			</section>
-			<!-- end sWorkTogether-->
-			<!-- start sVacancyResult-->
-			<div class="sVacancyResult section" id="sVacancyResult">
-				<div class="container">
-					<div class="row">
-						<div class="col-12">
-							<div class="dropdown"> 
-								<button class="sVacancyResult__btn dropdown__btn">Все вакансии
-									<svg class="icon icon-chevron-down ">
-										<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
-									</svg>
-								</button>
-								<div class="dropdown-menu dropdown__content"><a class="dropdown-item" href="#">Административный персонал</a><a class="dropdown-item" href="#">Бухгалтерия, управленческий учёт и пр</a><a class="dropdown-item" href="#">Высший менеджмент</a><a class="dropdown-item" href="#">Закупки</a></div>
+					<div class="sNewsCards__items"><a class="sNewsCards__item" href="#">
+						<div class="row">
+							<div class="col-md-4">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/sNewsCards-1.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/sNewsCards-1.webp"/><img class="object-fit-js" src="img/@2x/sNewsCards-1.png" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
 							</div>
-							<div class="form-wrap">
-								<form>
-									<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Поиск"/>
+							<div class="col-md-8">
+								<div class="sNewsCards__content">
+									<h2>Новые сушильные шкафы от&nbsp;Asko</h2>
+									<div class="sNewsCards__date">21.12.2021
 									</div>
-									<!-- +e.input-wrap-->
-									<button>
-										<svg class="icon icon-zoom ">
-											<use xlink:href="img/svg/sprite.svg#zoom"></use>
+									<p>Новый сушильный шкаф Asko станет функциональным и&nbsp;стильным дополнением вашего дома&nbsp;&mdash; вы&nbsp;будете удивляться, как вы&nbsp;справлялись без него! <br> Новый сушильный шкаф Asko станет функциональным и&nbsp;стильным дополнением вашего дома&nbsp;&mdash; вы&nbsp;будете удивляться, как вы&nbsp;справлялись без него...</p>
+									<div class="sNewsCards__btn"><span>подробнее</span>
+										<svg class="icon icon-chevron-right-lg ">
+											<use xlink:href="img/svg/sprite.svg#chevron-right-lg"></use>
 										</svg>
-									</button>
-								</form>
+									</div>
+								</div>
 							</div>
-						</div>
+						</div></a><a class="sNewsCards__item" href="#">
+						<div class="row">
+							<div class="col-md-4">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/sNewsCards-1.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/sNewsCards-1.webp"/><img class="object-fit-js" src="img/@2x/sNewsCards-1.png" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+							<div class="col-md-8">
+								<div class="sNewsCards__content">
+									<h2>Новые сушильные шкафы от&nbsp;Asko</h2>
+									<div class="sNewsCards__date">21.12.2021
+									</div>
+									<p>Новый сушильный шкаф Asko станет функциональным и&nbsp;стильным дополнением вашего дома&nbsp;&mdash; вы&nbsp;будете удивляться, как вы&nbsp;справлялись без него! <br> Новый сушильный шкаф Asko станет функциональным и&nbsp;стильным дополнением вашего дома&nbsp;&mdash; вы&nbsp;будете удивляться, как вы&nbsp;справлялись без него...</p>
+									<div class="sNewsCards__btn"><span>подробнее</span>
+										<svg class="icon icon-chevron-right-lg ">
+											<use xlink:href="img/svg/sprite.svg#chevron-right-lg"></use>
+										</svg>
+									</div>
+								</div>
+							</div>
+						</div></a><a class="sNewsCards__item" href="#">
+						<div class="row">
+							<div class="col-md-4">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/sNewsCards-1.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/sNewsCards-1.webp"/><img class="object-fit-js" src="img/@2x/sNewsCards-1.png" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+							<div class="col-md-8">
+								<div class="sNewsCards__content">
+									<h2>Новые сушильные шкафы от&nbsp;Asko</h2>
+									<div class="sNewsCards__date">21.12.2021
+									</div>
+									<p>Новый сушильный шкаф Asko станет функциональным и&nbsp;стильным дополнением вашего дома&nbsp;&mdash; вы&nbsp;будете удивляться, как вы&nbsp;справлялись без него! <br> Новый сушильный шкаф Asko станет функциональным и&nbsp;стильным дополнением вашего дома&nbsp;&mdash; вы&nbsp;будете удивляться, как вы&nbsp;справлялись без него...</p>
+									<div class="sNewsCards__btn"><span>подробнее</span>
+										<svg class="icon icon-chevron-right-lg ">
+											<use xlink:href="img/svg/sprite.svg#chevron-right-lg"></use>
+										</svg>
+									</div>
+								</div>
+							</div>
+						</div></a>
 					</div>
 				</div>
 			</div>
-			<!-- end sVacancyResult-->
+			<!-- end sNewsCards-->
 			<!-- start sForm-->
-			<section class="sForm section">
+			<section class="sForm sForm--return section">
 				<div class="container">
-					<div class="sForm__box">
-						<div class="sForm__bg"><img loading="lazy" src="img/@2x/sAbout-bg.png" alt=""/>
-						</div>
+					<div class="sForm__box bg-wrap">
+						<!-- picture-->
+						<picture class="picture-bg"> 
+							<source type="image/avif" srcset="img/@2x/avif/dark-bg.avif"/>
+							<source type="image/webp" srcset="img/@2x/webp/dark-bg.webp"/><img class="object-fit-js" src="img/@2x/dark-bg.png" alt="" loading="lazy"/>
+						</picture>
+						<!-- /picture-->
 						<div class="section-title">
-							<h2>Хотите связаться с нами и что-то предложить?</h2>
-							<p>Заполните форму обратной связи, напишите ваше мнение. Мы ответим вам на указанную почту</p>
+							<h2>Заявка</h2>
+							<p>Заполните заявку на возврат товара</p>
 						</div>
 						<div class="form-wrap">
 							<form>
-								<div class="form-wrap__row row">
-									<div class="form-wrap__left-col col-lg-auto">
+								<div class="form-wrap__row form-wrap__row--main row">
+									<div class="col-lg-4">
 										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше имя"/>
 										</div>
 										<!-- +e.input-wrap-->
-										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="email" type="email" placeholder="Ваша электронная почта"/>
+										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Вашa фамилия"/>
+										</div>
+										<!-- +e.input-wrap-->
+										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше отчество"/>
 										</div>
 										<!-- +e.input-wrap-->
 									</div>
-									<div class="col-lg">
-										<div class="form-wrap__input-wrap form-group"><textarea class="form-wrap__input form-control" name="textarea" placeholder="Ваш комментарий"></textarea>
+									<div class="col-lg-4">
+										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш телефон"/>
+										</div>
+										<!-- +e.input-wrap-->
+										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="email" type="email" placeholder="Ваша элетронная почта"/>
+										</div>
+										<!-- +e.input-wrap-->
+										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваш номер заказа"/>
 										</div>
 										<!-- +e.input-wrap-->
 									</div>
-									<div class="col-12 m-0"></div>
-									<div class="form-wrap__left-col col-lg-auto">
+									<div class="col-lg-4">
+										<div class="form-wrap__comment">
+											<div class="form-wrap__input-wrap form-group"><textarea class="form-wrap__input form-control" name="textarea" placeholder="Ваш комментарий"></textarea>
+											</div>
+											<!-- +e.input-wrap-->
+										</div>
+									</div>
+									<div class="col-sm-6 col-lg-auto">
+										<label class="btn-upload">загрузить файлы
+											<input type="file" name="file"/>
+										</label>
+									</div>
+								</div>
+								<div class="form-wrap__row form-wrap__row--footer row">
+									<div class="col-sm-6 col-lg-auto">
 										<button class="form-wrap__btn" type="submit">написать нам
 										</button>
 									</div>
-									<div class="col-lg">
+									<div class="col">
 										<div class="form-wrap__policy">
 											<div class="form-wrap__p-txt">
 												Мы безопасно храним данные и никому их не передаём, вот
@@ -853,7 +932,6 @@
 					</div>
 				</div>
 			</section>
-			<!-- end sForm-->
 			<footer class="footer footer-dd-items-js">
 				<div class="footer__bg"><img loading="lazy" src="img/@2x/sAbout-bg.png" alt=""/>
 				</div>
