--- a/public/031-certificates.html
+++ b/public/031-certificates.html
@@ -721,7 +721,7 @@
 			<!-- start sCertificatesHead-->
 			<section class="sCertificatesHead section" id="sCertificatesHead">
 				<!-- picture-->
-				<picture class="picture-bg"> 
+				<picture class="picture-bg offer-under"> 
 					<source type="image/avif" srcset="img/@2x/avif/sCertificates-head-1.avif" media="(min-width:576px)"/>
 					<source type="image/avif" srcset="img/@1x/avif/sCertificates-head-1.avif"/>
 					<source type="image/webp" srcset="img/@2x/webp/sCertificates-head-1.webp" media="(min-width:576px)"/>
@@ -730,9 +730,19 @@
 					<source type="image/jpg" srcset="img/@1x/avif/sCertificates-head-1.jpg"/><img class="object-fit-js" src="img/@2x/sCertificates-head-1.jpg" alt="" loading="lazy"/>
 				</picture>
 				<!-- /picture-->
+				<!-- picture-->
+				<picture class="picture-bg offer-i"> 
+					<source type="image/avif" srcset="img/@2x/avif/sCertificates-head.avif" media="(min-width:576px)"/>
+					<source type="image/avif" srcset="img/@1x/avif/sCertificates-head.avif"/>
+					<source type="image/webp" srcset="img/@2x/webp/sCertificates-head.webp" media="(min-width:576px)"/>
+					<source type="image/webp" srcset="img/@1x/webp/sCertificates-head.webp"/>
+					<source type="image/jpg" srcset="img/@2x/avif/sCertificates-head.jpg" media="(min-width:576px)"/>
+					<source type="image/jpg" srcset="img/@1x/avif/sCertificates-head.jpg"/><img class="object-fit-js" src="img/@2x/sCertificates-head.jpg" alt="" loading="lazy"/>
+				</picture>
+				<!-- /picture-->
 				<div class="container">
 					<div class="row"> 
-						<div class="col-6"> 
+						<div class="col-lg-6"> 
 							<div class="sCertificatesHead__offer">
 								<h1>Гарантия качества</h1>
 								<p>
@@ -753,7 +763,7 @@
 						<h2>Сертификаты дают гарантию того, что:</h2>
 					</div>
 					<div class="row">
-								<div class="col-4"> 
+								<div class="col-lg-4"> 
 									<div class="certGuarteesI">
 										<div class="certGuarteesI__i"><img src="img/svg/certGuarImage-1.svg" alt=""/>
 										</div>
@@ -762,7 +772,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-4"> 
+								<div class="col-lg-4"> 
 									<div class="certGuarteesI">
 										<div class="certGuarteesI__i"><img src="img/svg/certGuarImage-2.svg" alt=""/>
 										</div>
@@ -771,7 +781,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-4"> 
+								<div class="col-lg-4"> 
 									<div class="certGuarteesI">
 										<div class="certGuarteesI__i"><img src="img/svg/certGuarImage-3.svg" alt=""/>
 										</div>
@@ -786,13 +796,22 @@
 			<!-- end sCertGuarantees-->
 			<!-- start sAllCertificates-->
 			<section class="sAllCertificates section" id="sAllCertificates">
-				<div class="sAllCertificates__black">
+				<div class="sAllCertificates__line"> 
+					<!-- picture-->
+					<picture> 
+						<source type="image/avif" srcset="img/@2x/avif/sCertLine.avif" media="(min-width:576px)"/>
+						<source type="image/avif" srcset="img/@1x/avif/sCertLine.avif"/>
+						<source type="image/webp" srcset="img/@2x/webp/sCertLine.webp" media="(min-width:576px)"/>
+						<source type="image/webp" srcset="img/@1x/webp/sCertLine.webp"/>
+						<source type="image/jpg" srcset="img/@2x/avif/sCertLine.jpg" media="(min-width:576px)"/>
+						<source type="image/jpg" srcset="img/@1x/avif/sCertLine.jpg"/><img class="object-fit-js" src="img/@2x/sCertLine.jpg" alt="" loading="lazy"/>
+					</picture>
+					<!-- /picture-->
 				</div>
 				<div class="container">
 					<div class="section-title">
-					</div>
-					<div class="row">
-								<div class="col-6 col">
+						<div class="row">
+								<div class="section-title__col col-lg-6">
 									<div class="certificateEl">
 										<div class="certificateEl__w">
 											<!-- picture-->
@@ -811,7 +830,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-6 col">
+								<div class="section-title__col col-lg-6">
 									<div class="certificateEl">
 										<div class="certificateEl__w">
 											<!-- picture-->
@@ -830,7 +849,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-6 col">
+								<div class="section-title__col col-lg-6">
 									<div class="certificateEl">
 										<div class="certificateEl__w">
 											<!-- picture-->
@@ -849,7 +868,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-6 col">
+								<div class="section-title__col col-lg-6">
 									<div class="certificateEl">
 										<div class="certificateEl__w">
 											<!-- picture-->
@@ -868,6 +887,16 @@
 										</div>
 									</div>
 								</div>
+						</div>
+						<div class="row"> 
+							<div class="col"> 
+								<div class="section-title__btn">
+									<button class="catalog-btn" type="button">
+										<p>показать еще</p>
+									</button>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
