sNewsCards section done

--- a/public/030-news.html
+++ b/public/030-news.html
@@ -789,7 +789,7 @@
 					</div>
 					<div class="sNewsCards__items"><a class="sNewsCards__item" href="#">
 						<div class="row">
-							<div class="col-md-4">
+							<div class="col-lg-5 col-xxl-4">
 								<!-- picture-->
 								<picture> 
 									<source type="image/avif" srcset="img/@2x/avif/sNewsCards-1.avif"/>
@@ -797,7 +797,7 @@
 								</picture>
 								<!-- /picture-->
 							</div>
-							<div class="col-md-8">
+							<div class="col-lg-7 col-xxl-8">
 								<div class="sNewsCards__content">
 									<h2>Новые сушильные шкафы от&nbsp;Asko</h2>
 									<div class="sNewsCards__date">21.12.2021
@@ -812,7 +812,7 @@
 							</div>
 						</div></a><a class="sNewsCards__item" href="#">
 						<div class="row">
-							<div class="col-md-4">
+							<div class="col-lg-5 col-xxl-4">
 								<!-- picture-->
 								<picture> 
 									<source type="image/avif" srcset="img/@2x/avif/sNewsCards-1.avif"/>
@@ -820,7 +820,7 @@
 								</picture>
 								<!-- /picture-->
 							</div>
-							<div class="col-md-8">
+							<div class="col-lg-7 col-xxl-8">
 								<div class="sNewsCards__content">
 									<h2>Новые сушильные шкафы от&nbsp;Asko</h2>
 									<div class="sNewsCards__date">21.12.2021
@@ -835,7 +835,7 @@
 							</div>
 						</div></a><a class="sNewsCards__item" href="#">
 						<div class="row">
-							<div class="col-md-4">
+							<div class="col-lg-5 col-xxl-4">
 								<!-- picture-->
 								<picture> 
 									<source type="image/avif" srcset="img/@2x/avif/sNewsCards-1.avif"/>
@@ -843,12 +843,12 @@
 								</picture>
 								<!-- /picture-->
 							</div>
-							<div class="col-md-8">
+							<div class="col-lg-7 col-xxl-8">
 								<div class="sNewsCards__content">
 									<h2>Новые сушильные шкафы от&nbsp;Asko</h2>
 									<div class="sNewsCards__date">21.12.2021
 									</div>
-									<p>Новый сушильный шкаф Asko станет функциональным и&nbsp;стильным дополнением вашего дома&nbsp;&mdash; вы&nbsp;будете удивляться, как вы&nbsp;справлялись без него! <br> Новый сушильный шкаф Asko станет функциональным и&nbsp;стильным дополнением вашего дома&nbsp;&mdash; вы&nbsp;будете удивляться, как вы&nbsp;справлялись без него...</p>
+									<p>Новый сушильный шкаф Asko станет функциональным и&nbsp;стильным дополнением вашего дома&nbsp;&mdash; вы&nbsp;будете удивляться, как вы&nbsp;справлялись без него!</p>
 									<div class="sNewsCards__btn"><span>подробнее</span>
 										<svg class="icon icon-chevron-right-lg ">
 											<use xlink:href="img/svg/sprite.svg#chevron-right-lg"></use>
