--- a/public/030-news.html
+++ b/public/030-news.html
@@ -862,7 +862,7 @@
 			</div>
 			<!-- end sNewsCards-->
 			<!-- start sForm-->
-			<section class="sForm sForm--return section">
+			<section class="sForm sForm--news section">
 				<div class="container">
 					<div class="sForm__box bg-wrap">
 						<!-- picture-->
@@ -870,64 +870,31 @@
 							<source type="image/avif" srcset="img/@2x/avif/dark-bg.avif"/>
 							<source type="image/webp" srcset="img/@2x/webp/dark-bg.webp"/><img class="object-fit-js" src="img/@2x/dark-bg.png" alt="" loading="lazy"/>
 						</picture>
-						<!-- /picture-->
-						<div class="section-title">
-							<h2>Заявка</h2>
-							<p>Заполните заявку на возврат товара</p>
-						</div>
-						<div class="form-wrap">
-							<form>
-								<div class="form-wrap__row form-wrap__row--main row">
-									<div class="col-lg-4">
-										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше имя"/>
-										</div>
-										<!-- +e.input-wrap-->
-										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Вашa фамилия"/>
-										</div>
-										<!-- +e.input-wrap-->
-										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше отчество"/>
-										</div>
-										<!-- +e.input-wrap-->
-									</div>
-									<div class="col-lg-4">
-										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш телефон"/>
-										</div>
-										<!-- +e.input-wrap-->
+						<!-- /picture--><img class="sForm__image" loading="lazy" src="img/svg/sFormNews.svg" alt="" role="presentation"/>
+						<div class="row">
+							<div class="col-lg-7 col-xl">
+								<div class="section-title">
+									<h2>Подпишись на наши новости!</h2>
+									<p>Заполни форму и ты всегда будешь в курсе самых последних новостей и новинок нашего салона!</p>
+								</div>
+							</div>
+							<div class="col-lg-5 col-xl-auto">
+								<div class="form-wrap">
+									<form>
 										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="email" type="email" placeholder="Ваша элетронная почта"/>
 										</div>
 										<!-- +e.input-wrap-->
-										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваш номер заказа"/>
-										</div>
-										<!-- +e.input-wrap-->
-									</div>
-									<div class="col-lg-4">
-										<div class="form-wrap__comment">
-											<div class="form-wrap__input-wrap form-group"><textarea class="form-wrap__input form-control" name="textarea" placeholder="Ваш комментарий"></textarea>
-											</div>
-											<!-- +e.input-wrap-->
-										</div>
-									</div>
-									<div class="col-sm-6 col-lg-auto">
-										<label class="btn-upload">загрузить файлы
-											<input type="file" name="file"/>
-										</label>
-									</div>
-								</div>
-								<div class="form-wrap__row form-wrap__row--footer row">
-									<div class="col-sm-6 col-lg-auto">
-										<button class="form-wrap__btn" type="submit">написать нам
+										<button class="form-wrap__btn" type="submit">подписаться
 										</button>
-									</div>
-									<div class="col">
 										<div class="form-wrap__policy">
 											<div class="form-wrap__p-txt">
 												Мы безопасно храним данные и никому их не передаём, вот
 												<a href="#">условия.</a>
 											</div>
 										</div>
-									</div>
+									</form>
 								</div>
-							</form>
+							</div>
 						</div>
 					</div>
 				</div>
