--- a/public/020-landing.html
+++ b/public/020-landing.html
@@ -2408,7 +2408,7 @@
 									<li><a href="#">Мелкая кухонная техника</a></li>
 									<li><a href="#">Сантехника для кухни</a></li>
 								</ul>
-							</div><a class="footer__creator-logo" href="#"><span class="footer__cr-img"><img laoding="lazy" src="img/svg/creator-logo.svg" alt=""/></span><span class="footer__cr-txt">Разработка сайта</span></a>
+							</div><a class="footer__creator-logo" href="#"><span class="footer__cr-img"><img loading="lazy" src="img/svg/creator-logo.svg" alt=""/></span><span class="footer__cr-txt">Разработка сайта</span></a>
 						</div>
 					</div>
 					<div class="footer__bot">
