--- a/public/030-news.html
+++ b/public/030-news.html
@@ -733,37 +733,49 @@
 							<source type="image/avif" srcset="img/@2x/avif/sNewsHeader-1.avif"/>
 							<source type="image/webp" srcset="img/@2x/webp/sNewsHeader-1.webp"/><img class="object-fit-js" src="img/@2x/sNewsHeader-1.png" alt="" loading="lazy"/>
 						</picture>
-						<!-- /picture--><span class="sNewsHeader__caption">
-						<h3>Новинки от&nbsp;Miele
-							<svg class="icon icon-chevron-right-lg ">
-								<use xlink:href="img/svg/sprite.svg#chevron-right-lg"></use>
-							</svg>
-						</h3><span class="sNewsHeader__date">21.12.2021</span>
-						<p>В&nbsp;мае 2018 года компания Miele обновила ассортимент вытяжек. Встраиваемые, подвесные, настенные и&nbsp;островные модели из&nbsp;предыдущего каталога ...</p></span></a><a class="sNewsHeader__item bg-wrap" href="#">
+						<!-- /picture-->
+						<div class="sNewsHeader__caption">
+							<h3>Новинки от&nbsp;Miele
+								<svg class="icon icon-chevron-right-lg ">
+									<use xlink:href="img/svg/sprite.svg#chevron-right-lg"></use>
+								</svg>
+							</h3>
+							<div class="sNewsHeader__date">21.12.2021
+							</div>
+							<p>В&nbsp;мае 2018 года компания Miele обновила ассортимент вытяжек. Встраиваемые, подвесные, настенные и&nbsp;островные модели из&nbsp;предыдущего каталога ...</p>
+						</div></a><a class="sNewsHeader__item bg-wrap" href="#">
 						<!-- picture-->
 						<picture> 
 							<source type="image/avif" srcset="img/@2x/avif/sNewsHeader-2.avif"/>
 							<source type="image/webp" srcset="img/@2x/webp/sNewsHeader-2.webp"/><img class="object-fit-js" src="img/@2x/sNewsHeader-2.png" alt="" loading="lazy"/>
 						</picture>
-						<!-- /picture--><span class="sNewsHeader__caption">
-						<h3>Снижены цены на&nbsp;мойки Blanco
-							<svg class="icon icon-chevron-right-lg ">
-								<use xlink:href="img/svg/sprite.svg#chevron-right-lg"></use>
-							</svg>
-						</h3><span class="sNewsHeader__date">21.12.2021</span>
-						<p>В&nbsp;мае 2018 года компания Miele обновила ассортимент вытяжек. Встраиваемые, подвесные, настенные и&nbsp;островные модели из&nbsp;предыдущего каталога ...</p></span></a><a class="sNewsHeader__item bg-wrap" href="#">
+						<!-- /picture-->
+						<div class="sNewsHeader__caption">
+							<h3>Снижены цены на&nbsp;мойки Blanco
+								<svg class="icon icon-chevron-right-lg ">
+									<use xlink:href="img/svg/sprite.svg#chevron-right-lg"></use>
+								</svg>
+							</h3>
+							<div class="sNewsHeader__date">21.12.2021
+							</div>
+							<p>В&nbsp;мае 2018 года компания Miele обновила ассортимент вытяжек. Встраиваемые, подвесные, настенные и&nbsp;островные модели из&nbsp;предыдущего каталога ...</p>
+						</div></a><a class="sNewsHeader__item bg-wrap" href="#">
 						<!-- picture-->
 						<picture> 
 							<source type="image/avif" srcset="img/@2x/avif/sNewsHeader-3.avif"/>
 							<source type="image/webp" srcset="img/@2x/webp/sNewsHeader-3.webp"/><img class="object-fit-js" src="img/@2x/sNewsHeader-3.png" alt="" loading="lazy"/>
 						</picture>
-						<!-- /picture--><span class="sNewsHeader__caption">
-						<h3>Новинки кухонной бытовой <br> техники от&nbsp;Asko
-							<svg class="icon icon-chevron-right-lg ">
-								<use xlink:href="img/svg/sprite.svg#chevron-right-lg"></use>
-							</svg>
-						</h3><span class="sNewsHeader__date">21.12.2021</span>
-						<p>В&nbsp;мае 2018 года компания Miele обновила ассортимент вытяжек. Встраиваемые, подвесные, настенные и&nbsp;островные модели из&nbsp;предыдущего каталога ...</p></span></a>
+						<!-- /picture-->
+						<div class="sNewsHeader__caption">
+							<h3>Новинки кухонной бытовой <br> техники от&nbsp;Asko
+								<svg class="icon icon-chevron-right-lg ">
+									<use xlink:href="img/svg/sprite.svg#chevron-right-lg"></use>
+								</svg>
+							</h3>
+							<div class="sNewsHeader__date">21.12.2021
+							</div>
+							<p>В&nbsp;мае 2018 года компания Miele обновила ассортимент вытяжек. Встраиваемые, подвесные, настенные и&nbsp;островные модели из&nbsp;предыдущего каталога ...</p>
+						</div></a>
 					</div>
 				</div>
 			</div>
@@ -870,7 +882,7 @@
 							<source type="image/avif" srcset="img/@2x/avif/dark-bg.avif"/>
 							<source type="image/webp" srcset="img/@2x/webp/dark-bg.webp"/><img class="object-fit-js" src="img/@2x/dark-bg.png" alt="" loading="lazy"/>
 						</picture>
-						<!-- /picture--><img class="sForm__image" loading="lazy" src="img/svg/sFormNews.svg" alt="" role="presentation"/>
+						<!-- /picture--><img class="sForm__image" loading="lazy" src="img/svg/sFormNews.svg" alt=""/>
 						<div class="row">
 							<div class="col-lg-7 col-xl">
 								<div class="section-title">
@@ -978,7 +990,7 @@
 									<li><a href="#">Мелкая кухонная техника</a></li>
 									<li><a href="#">Сантехника для кухни</a></li>
 								</ul>
-							</div><a class="footer__creator-logo" href="#"><span class="footer__cr-img"><img laoding="lazy" src="img/svg/creator-logo.svg" alt=""/></span><span class="footer__cr-txt">Разработка сайта</span></a>
+							</div><a class="footer__creator-logo" href="#"><span class="footer__cr-img"><img loading="lazy" src="img/svg/creator-logo.svg" alt=""/></span><span class="footer__cr-txt">Разработка сайта</span></a>
 						</div>
 					</div>
 					<div class="footer__bot">
