--- a/public/030-news.html
+++ b/public/030-news.html
@@ -820,6 +820,11 @@
 											<use xlink:href="img/svg/sprite.svg#chevron-right-lg"></use>
 										</svg>
 									</div>
+									<button class="sNewsCards__btn-like active">
+										<svg class="icon icon-btnLike ">
+											<use xlink:href="img/svg/sprite.svg#btnLike"></use>
+										</svg>
+									</button>
 								</div>
 							</div>
 						</div></a><a class="sNewsCards__item" href="#">
@@ -843,6 +848,11 @@
 											<use xlink:href="img/svg/sprite.svg#chevron-right-lg"></use>
 										</svg>
 									</div>
+									<button class="sNewsCards__btn-like">
+										<svg class="icon icon-btnLike ">
+											<use xlink:href="img/svg/sprite.svg#btnLike"></use>
+										</svg>
+									</button>
 								</div>
 							</div>
 						</div></a><a class="sNewsCards__item" href="#">
@@ -866,6 +876,11 @@
 											<use xlink:href="img/svg/sprite.svg#chevron-right-lg"></use>
 										</svg>
 									</div>
+									<button class="sNewsCards__btn-like">
+										<svg class="icon icon-btnLike ">
+											<use xlink:href="img/svg/sprite.svg#btnLike"></use>
+										</svg>
+									</button>
 								</div>
 							</div>
 						</div></a>
